--- a/index.html
+++ b/index.html
@@ -81,7 +81,7 @@
           <li class="depth1" onmouseenter="mainHeaderEnterHandler(this)" onmouseleave="mainHeaderLeaveHandler(this)">
             <a href="./sub/boardList.html">고객서비스</a>
             <div class="depth2_wrapper">
-              <div class="inner" style="">
+              <div class="inner" style="height: 343px">
                 <h2>고객서비스</h2>
                 <ul class="depth2 first">
                   <li><a href="./sub/boardList.html">주요서비스</a></li>
@@ -104,7 +104,7 @@
           <li class="depth1" onmouseenter="mainHeaderEnterHandler(this)" onmouseleave="mainHeaderLeaveHandler(this)">
             <a href="#">지식플랫폼</a>
             <div class="depth2_wrapper">
-              <div class="inner" style="">
+              <div class="inner" style="height: 441px">
                 <h2>지식플랫폼</h2>
                 <ul class="depth2 second">
                   <li><a href="#">연구보고서</a></li>
@@ -128,7 +128,7 @@
           <li class="depth1" onmouseenter="mainHeaderEnterHandler(this)" onmouseleave="mainHeaderLeaveHandler(this)">
             <a href="#">사업소개</a>
             <div class="depth2_wrapper">
-              <div class="inner" style="">
+              <div class="inner" style="height: 440px">
                 <h2>사업소개</h2>
                 <ul class="depth2 third">
                   <li>
@@ -188,7 +188,7 @@
           <li class="depth1" onmouseenter="mainHeaderEnterHandler(this)" onmouseleave="mainHeaderLeaveHandler(this)">
             <a href="#">알림마당</a>
             <div class="depth2_wrapper">
-              <div class="inner" style="">
+              <div class="inner" style="height: 340px">
                 <h2>알림마당</h2>
                 <ul class="depth2">
                   <li><a href="#">공지사항</a></li>
@@ -208,7 +208,7 @@
           <li class="depth1" onmouseenter="mainHeaderEnterHandler(this)" onmouseleave="mainHeaderLeaveHandler(this)">
             <a href="#">ESG 열린경영</a>
             <div class="depth2_wrapper">
-              <div class="inner" style="">
+              <div class="inner" style="height: 433px">
                 <h2>ESG 열린경영</h2>
                 <ul class="depth2">
                   <li><a href="#">사전정보공표</a></li>
@@ -231,7 +231,7 @@
           <li class="depth1" onmouseenter="mainHeaderEnterHandler(this)" onmouseleave="mainHeaderLeaveHandler(this)">
             <a href="#">KISA 소개</a>
             <div class="depth2_wrapper">
-              <div class="inner" style="">
+              <div class="inner" style="height: 340px">
                 <h2>KISA 소개</h2>
                 <ul class="depth2">
                   <li><a href="#">기관장 인사말</a></li>
